# Valorant-Data-Project

./: AccountDataCollection.py  Aggregate Statistics for Model.ipynb  FindMoreUsers.py  ManipDFStats.py  MatchAndRankRequest.py  MatchDataCollection.py  README.md  Scrap Account Data.ipynb  Val_Account_Scrap.ipynb  Val_Stat_Scrap.ipynb  __init__.py  all_accounts.csv  api_requests.py  composite_stats.py  feature_study.ipynb  graphs.py  initial_data_scrap.ipynb  pyproject.toml  rank_and_position_dfs.py  remove_statistical_outliers.py
.ipynb_checkpoints/: Aggregate Statistics for Model-checkpoint.ipynb  Scrap Account Data-checkpoint.ipynb  Val_Account_Scrap-checkpoint.ipynb  Val_Stat_Scrap-checkpoint.ipynb  feature_study-checkpoint.ipynb  initial_data_scrap-checkpoint.ipynb
data/: accounts_from_('BabyJ', 'Halo').csv  accounts_from_('Kisuke', 'zzz').csv  accounts_from_('SEN Kyu', '9771').csv  accounts_from_('Symperion', '4KT').csv  accounts_from_('Tomato Taco', '5111').csv  accounts_from_('Toph', '00001').csv  accounts_from_('alam2881', 'NA111').csv  accounts_from_('beta4days', 'dogw').csv  accounts_from_('milk green tea', 'boba').csv  clean_dist.csv  match_dist.csv  match_rank_dist.csv  rank_dist.csv  rank_total_list.csv  total_accounts_list_depth2.csv
lists/: accounts_from_('BabyJ', 'Halo').csv  accounts_from_('Kisuke', 'zzz').csv  accounts_from_('SEN Kyu', '9771').csv  accounts_from_('Symperion', '4KT').csv  accounts_from_('Tomato Taco', '5111').csv  accounts_from_('Toph', '00001').csv  accounts_from_('alam2881', 'NA111').csv  accounts_from_('beta4days', 'dogw').csv  (+1 more)
(+51 files in other folders)
