

[project] 
name = "Valorant-Data-Project"
version = "0.0.1"
authors = [
  { name="Cody Grant", email="cgrant093@gmail.com" },
]
description = "Valorant data project"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls] 
"Homepage" = "https://github.com/cgrant093/Valorant-Data-Project"

[build-system] 
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options] 
pythonpath = [".", "src"]